--- a/index.html
+++ b/index.html
@@ -9,46 +9,92 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <script src="script.js" defer></script>
+  <title>Frontend Mentor | Interactive rating component</title>>
 </head>
 <body>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
+  <div class="rating-card">
+    <div class="rating-card-content">
+      <img src="./images/icon-star.svg" class="star" alt="star">
+      <h1 class="rating-card-title">How did we do?</h1>
+      <p class="rating-card-description">
+        Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+      </p>
+      <form class="form">
+        <div>
+          <div class="form-radio-group">
+            <input 
+            type="radio" 
+            name="rate-value" 
+            id="rate-1" 
+            class="form-radio-input" 
+            value="1">
+            <label for="rate-1" class="form-radio-label">
+              <span class="form-radio-button">
+                <div>1</div>
+              </span>
+            </label>
+          </div>
+          <div class="form-radio-group">
+            <input 
+            type="radio" 
+            name="rate-value" 
+            id="rate-2" 
+            class="form-radio-input" 
+            value="2">
+            <label for="rate-2" class="form-radio-label">
+              <span class="form-radio-button">
+                <div>2</div>
+              </span>
+            </label>
+          </div>
+          <div class="form-radio-group">
+            <input 
+            type="radio" 
+            name="rate-value" 
+            id="rate-3" 
+            class="form-radio-input" 
+            value="3">
+            <label for="rate-3" class="form-radio-label">
+              <span class="form-radio-button">
+                <div>3</div>
+              </span>
+            </label>
+          </div>
+          <div class="form-radio-group">
+            <input 
+            type="radio" 
+            name="rate-value" 
+            id="rate-4" 
+            class="form-radio-input" 
+            value="4">
+            <label for="rate-4" class="form-radio-label">
+              <span class="form-radio-button">
+                <div>4</div>
+              </span>
+            </label>
+          </div>
+          <div class="form-radio-group">
+            <input 
+            type="radio" 
+            name="rate-value" 
+            id="rate-5" 
+            class="form-radio-input" 
+            value="5">
+            <label for="rate-5" class="form-radio-label">
+              <span class="form-radio-button">
+                <div>5</div>
+              </span>
+            </label>
+          </div>
+        </div>
+        <button class="form-button" type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
-<script src="script.js"></script>
 </body>
 </html>
