--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
-  <script src="script.js" defer></script>
+  
   <title>Frontend Mentor | Interactive rating component</title>>
 </head>
 <body>
@@ -91,10 +91,20 @@
         <button class="form-button" type="submit">Submit</button>
       </form>
     </div>
+    <!-- <div class="thank-you">
+      <img src="./images/illustration-thank-you.svg" alt="thank you card" class="thank-you-img">
+      <p class="result">You selected 4 out of 5</p>
+      <h1 class="thank-you-title">Thank You!</h1>
+      <p class="thank-you-description">
+        We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!
+      </p>
+    </div> -->
   </div>
-  <div class="attribution">
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
+  <script src="script.js" defer></script>
 </body>
 </html>
