--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/DanWinCross">Daniel Cross</a>.
   </footer>
   <script src="script.js" defer></script>
 </body>
